ci: set up release please for smolagents

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -66,6 +66,10 @@
         "python/instrumentation/openinference-instrumentation-anthropic": {
             "package-name": "python-openinference-instrumentation-anthropic",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-smolagents": {
+            "package-name": "python-openinference-instrumentation-smolagents",
+            "release-type": "python"
         }
     }
 }
