--- a/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
@@ -37,14 +37,14 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-    "haystack-ai >= 2.0.0",
+    "haystack-ai >= 2.9.0",
 ]
 test = [
-    "haystack-ai==2.3.1",
+    "haystack-ai==2.9.0",
     "cohere-haystack",
     "opentelemetry-sdk",
+    "vcrpy>=7.0.0",
     "pytest-recording",
-    "respx",
 ]
 
 [project.urls]
