--- a/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "OpenInference Haystack Instrumentation"
 readme = "README.md"
 license = "Apache-2.0"
-requires-python = ">=3.8, <3.13"
+requires-python = ">=3.9, <3.13"
 authors = [
     { name = "OpenInference Authors", email = "oss@arize.com" },
 ]
@@ -37,14 +37,14 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-    "haystack-ai >= 2.0.0",
+    "haystack-ai >= 2.9.0",
 ]
 test = [
-    "haystack-ai==2.3.1",
+    "haystack-ai==2.9.0",
     "cohere-haystack",
     "opentelemetry-sdk",
+    "vcrpy>=7.0.0",
     "pytest-recording",
-    "respx",
 ]
 
 [project.urls]
