--- a/release-please-config.json
+++ b/release-please-config.json
@@ -70,6 +70,10 @@
         "python/instrumentation/openinference-instrumentation-smolagents": {
             "package-name": "python-openinference-instrumentation-smolagents",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-autogen": {
+            "package-name": "python-openinference-instrumentation-autogen",
+            "release-type": "python"
         }
     }
 }
