--- a/python/tox.ini
+++ b/python/tox.ini
@@ -19,7 +19,7 @@ envlist =
   ; py3{9,12}-ci-instructor
   py3{8,12}-ci-{anthropic,anthropic-latest}
   py3{10,13}-ci-{smolagents,smolagents-latest}
-  py3{8,12}-ci-{smolagents,smolagents-latest}
+  py3{8,12}-ci-{autogen,autogen-latest}
   py38-mypy-langchain_core
 
 [testenv]
