--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,7 +12,7 @@ envlist =
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{9,12}-ci-{langchain,langchain-latest}
   ; py3{9,12}-ci-{guardrails,guardrails-latest}
-  py3{10,12}-ci-{crewai,crewai-latest}
+  py3{10,12}-ci-{crewai}
   py3{9,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
   py3{8,12}-ci-{litellm,litellm-latest}
