--- a/python/tox.ini
+++ b/python/tox.ini
@@ -74,7 +74,7 @@ commands_pre =
   guardrails: uv pip install -r test-requirements.txt
   guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1' 'httpx<0.28'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
-  crewai-latest: uv pip install -U 'crewai==0.61' 'httpx<0.28'
+  crewai-latest: uv pip install -U 'crewai==0.60' 'httpx<0.28'
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: uv pip install -U haystack-ai 'httpx<0.28'
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
@@ -94,11 +94,11 @@ commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
   mypy: mypy {posargs:.}
-  test: pytest -vv --full-trace -rfEs -l --nf {posargs:.}
+  test: pytest -rfEs -l --nf {posargs:.}
   ci: ruff format --diff .
   ci: ruff check --no-fix .
   ci: mypy .
-  ci: pytest  -vv --full-trace -n auto -x -ra {posargs:.}
+  ci: pytest -n auto -x -ra {posargs:.}
 
 [testenv:add_symlinks]
 description = Add symlinks to packages (for editable install)
