--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,7 +12,7 @@ envlist =
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{9,12}-ci-{langchain,langchain-latest}
   ; py3{9,12}-ci-{guardrails,guardrails-latest}
-  ; py3{10,12}-ci-{crewai,crewai-latest}
+  py3{10,12}-ci-{crewai,crewai-latest}
   py3{9,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
   py3{8,12}-ci-{litellm,litellm-latest}
@@ -74,7 +74,7 @@ commands_pre =
   guardrails: uv pip install -r test-requirements.txt
   guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1' 'httpx<0.28'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
-  crewai-latest: uv pip install -U crewai 'httpx<0.28'
+  crewai-latest: uv pip install -U 'crewai==0.55.2' 'httpx<0.28'
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: uv pip install -U haystack-ai 'httpx<0.28'
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
