--- a/python/tox.ini
+++ b/python/tox.ini
@@ -4,7 +4,7 @@ skipsdist = True
 envlist =
   py3{8,13}-ci-semconv
   py3{8,13}-ci-instrumentation
-  py3{8,12}-ci-{bedrock,bedrock-latest}
+  py3{9,13}-ci-{bedrock,bedrock-latest}
   py3{9,12}-ci-{mistralai,mistralai-latest}
   py3{8,12}-ci-{openai,openai-latest}
   py3{8,12}-ci-{vertexai,vertexai-latest}
@@ -51,7 +51,7 @@ commands_pre =
   instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation[test]
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
-  bedrock-latest: uv pip install -U boto3 'httpx<0.28'
+  bedrock-latest: uv pip install -U boto3 anthropic
   mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
   mistralai-latest: uv pip install -U mistralai 'httpx<0.28'
   openai: uv pip uninstall -r test-requirements.txt
@@ -112,3 +112,27 @@ changedir = openinference-instrumentation/src/openinference/instrumentation
 allowlist_externals = find
 commands =
   find . -maxdepth 1 -type l -exec unlink {} \;
+
+[testenv:codegen_anthropic_models_for_bedrock]
+description = Generate Anthropic Models for Bedrock Instrumentor
+changedir = {toxinidir}/instrumentation/openinference-instrumentation-bedrock/scripts/codegen/anthropic/
+setenv =
+  OUTPUT = {toxinidir}/instrumentation/openinference-instrumentation-bedrock/src/openinference/instrumentation/bedrock/__generated__/anthropic/_types.py
+commands =
+  uv pip install -U anthropic pydantic
+  uv pip list -v
+  python -c "import pathlib; pathlib.Path('{env:OUTPUT}').unlink(missing_ok=True)"
+  python json_schema.py anthropic_schema.json
+  uv tool run --from datamodel-code-generator datamodel-codegen \
+    --input anthropic_schema.json \
+    --input-file-type jsonschema \
+    --output {env:OUTPUT} \
+    --output-model-type dataclasses.dataclass \
+    --collapse-root-models \
+    --enum-field-as-literal all \
+    --target-python-version 3.9 \
+    --use-default-kwarg \
+    --use-double-quotes \
+    --wrap-string-literal \
+    --disable-timestamp
+  python {env:OUTPUT}
