--- a/python/instrumentation/openinference-instrumentation-smolagents/tests/openinference/instrumentation/smolagents/cassettes/test_instrumentor/TestModels.test_openai_server_model_with_tool_has_expected_attributes.yaml
+++ b/python/instrumentation/openinference-instrumentation-smolagents/tests/openinference/instrumentation/smolagents/cassettes/test_instrumentor/TestModels.test_openai_server_model_with_tool_has_expected_attributes.yaml
@@ -1,21 +1,20 @@
 interactions:
 - request:
-    body: '{"messages": [{"role": "user", "content": "What is the weather in Paris?"}],
-      "model": "gpt-4o", "max_tokens": 1500, "stop": null, "temperature": 0.7, "tool_choice":
-      "auto", "tools": [{"type": "function", "function": {"name": "get_weather", "description":
-      "Get the weather for a given city", "parameters": {"type": "object", "properties":
-      {"location": {"type": "string", "description": "The city to get the weather
-      for"}}, "required": ["location"]}}}]}'
+    body: '{"messages":[{"role":"user","content":[{"type":"text","text":"What is the
+      weather in Paris?"}]}],"model":"gpt-4o","max_tokens":4096,"tool_choice":"required","tools":
+      [{"type":"function","function":{"name":"get_weather","description":"Get the weather for a 
+      given city","parameters":{"type":"object","properties":{"location":{"type":"string","description":
+      "The city to get the weather for"}},"required":["location"]}}}]}'
     headers: {}
     method: POST
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: "{\n  \"id\": \"chatcmpl-Ap7uf7aUH5nQ3tOeCHnA7WP70vV23\",\n  \"object\":
-        \"chat.completion\",\n  \"created\": 1736748509,\n  \"model\": \"gpt-4o-2024-08-06\",\n
+      string: "{\n  \"id\": \"chatcmpl-Ax7BZfEQe2evzgqbTVXWo0ZqoMIUf\",\n  \"object\":
+        \"chat.completion\",\n  \"created\": 1738652337,\n  \"model\": \"gpt-4o-2024-08-06\",\n
         \ \"choices\": [\n    {\n      \"index\": 0,\n      \"message\": {\n        \"role\":
         \"assistant\",\n        \"content\": null,\n        \"tool_calls\": [\n          {\n
-        \           \"id\": \"call_SJU40osDa7rxyCVRXc9wG2Vs\",\n            \"type\":
+        \           \"id\": \"call_EUuviydGIG5Jau3DLw4v4cue\",\n            \"type\":
         \"function\",\n            \"function\": {\n              \"name\": \"get_weather\",\n
         \             \"arguments\": \"{\\\"location\\\":\\\"Paris\\\"}\"\n            }\n
         \         }\n        ],\n        \"refusal\": null\n      },\n      \"logprobs\":
@@ -25,7 +24,7 @@ interactions:
         0\n    },\n    \"completion_tokens_details\": {\n      \"reasoning_tokens\":
         0,\n      \"audio_tokens\": 0,\n      \"accepted_prediction_tokens\": 0,\n
         \     \"rejected_prediction_tokens\": 0\n    }\n  },\n  \"service_tier\":
-        \"default\",\n  \"system_fingerprint\": \"fp_703d4ff298\"\n}\n"
+        \"default\",\n  \"system_fingerprint\": \"fp_50cad350e4\"\n}\n"
     headers: {}
     status:
       code: 200
