--- a/python/tox.ini
+++ b/python/tox.ini
@@ -53,41 +53,41 @@ commands_pre =
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: uv pip install -U boto3 anthropic
   mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
-  mistralai-latest: uv pip install -U mistralai 'httpx<0.28'
+  mistralai-latest: uv pip install -U mistralai
   openai: uv pip uninstall -r test-requirements.txt
   openai: uv pip install --reinstall-package openinference-instrumentation-openai .
   openai: python -c 'import openinference.instrumentation.openai'
   openai: uv pip install -r test-requirements.txt
-  openai-latest: uv pip install -U openai 'httpx<0.28'
+  openai-latest: uv pip install -U openai
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
-  vertexai-latest: uv pip install -U vertexai 'httpx<0.28'
-  llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test] 'httpx<0.28'
-  llama_index-latest: uv pip install -U llama-index llama-index-core llama-index-llms-openai openai llama-index-llms-anthropic anthropic 'httpx<0.28'
+  vertexai-latest: uv pip install -U vertexai
+  llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
+  llama_index-latest: uv pip install -U llama-index llama-index-core llama-index-llms-openai openai llama-index-llms-anthropic anthropic
   dspy: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
-  dspy-latest: uv pip install -U dspy-ai 'httpx<0.28'
+  dspy-latest: uv pip install -U dspy-ai
   langchain: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
-  langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community 'httpx<0.28'
+  langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
   langchain_core: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: uv pip uninstall -r test-requirements.txt
   guardrails: uv pip install --reinstall-package openinference-instrumentation-guardrails .
   guardrails: python -c 'import openinference.instrumentation.guardrails'
   guardrails: uv pip install -r test-requirements.txt
-  guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1' 'httpx<0.28'
+  guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
-  crewai-latest: uv pip install -U crewai 'httpx<0.28'
+  crewai-latest: uv pip install -U crewai
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
-  haystack-latest: uv pip install -U haystack-ai 'httpx<0.28'
+  haystack-latest: uv pip install -U haystack-ai
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
-  groq-latest: uv pip install -U groq 'httpx<0.28'
+  groq-latest: uv pip install -U groq
   litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
-  litellm-latest: uv pip install -U --only-binary=tokenizers litellm 'httpx<0.28' 'tokenizer<=0.20.3'
+  litellm-latest: uv pip install -U --only-binary=tokenizers litellm 'tokenizer<=0.20.3'
   ; instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   ; instructor-latest: uv pip install -U instructor
   anthropic: uv pip uninstall -r test-requirements.txt
   anthropic: uv pip install --reinstall-package openinference-instrumentation-anthropic .
   anthropic: python -c 'import openinference.instrumentation.anthropic'
   anthropic: uv pip install -r test-requirements.txt
-  anthropic-latest: uv pip install -U anthropic 'httpx<0.28'
+  anthropic-latest: uv pip install -U anthropic
   smolagents: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-smolagents[test]
   autogen: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-autogen[test]
 commands =
