--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -72,6 +72,16 @@ jobs:
           } >> "$GITHUB_OUTPUT"
         shell: bash
         id: failures
+      - name: Create message text
+        if: ${{ steps.failures.outputs.list != '' }}
+        run: |
+          {
+            echo "text<<EOF"
+            echo "CI Failures for Python Packages:"
+            echo "${{ steps.failures.outputs.list }}"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+        id: message
       - name: Send message to Slack
         if: ${{ steps.failures.outputs.list != '' }}
         uses: slackapi/slack-github-action@v1
@@ -79,7 +89,7 @@ jobs:
           payload: |
             {
               "type": "mrkdwn",
-              "text": ${{ toJSON(steps.failures.outputs.list) }}
+              "text": ${{ toJSON(steps.message.outputs.text) }}
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
