--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,40 +10,31 @@ permissions:
 name: release
 
 jobs:
-  create-release:
+  release:
     runs-on: ubuntu-latest
     outputs:
-      python_path_released: ${{ steps.parse.outputs.python_path_released }}
-      js_path_released: ${{ steps.parse.outputs.js_path_released }}
+      releases_created: ${{ steps.release.outputs.releases_created }}
+      paths_released: ${{ steps.release.outputs.paths_released }}
     steps:
-      - uses: google-github-actions/release-please-action@v4
-        id: release-please
-      - name: Parse release path
-        if: ${{ steps.release-please.outputs.releases_created == 'true' }}
-        id: parse
-        env:
-          PATHS_RELEASED: ${{ steps.release-please.outputs.paths_released }}
-        # We assume that only one path is released at a time
-        run: |
-          echo $PATHS_RELEASED | jq -r '.[0]' | while read -r PATH; do
-            case $PATH in 
-              python/*)
-                echo "python_path_released=$PATH" >> $GITHUB_OUTPUT ;;
-              js/*)
-                echo "js_path_released=$PATH" >> $GITHUB_OUTPUT ;;
-            esac
-          done
+      - uses: googleapis/release-please-action@v4
+        id: release
 
-  publish-python-distribution:
+  publish:
     name: Publish Python distribution
     runs-on: ubuntu-latest
-    needs: create-release
-    if: ${{ needs.create-release.outputs.python_path_released != '' }}
+    needs: release
+    if: ${{ needs.release.outputs.releases_created == 'true' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        path: ${{ fromJSON(needs.release.outputs.paths_released) }}
     defaults:
       run:
-        working-directory: ${{ needs.create-release.outputs.python_path_released }}
+        working-directory: ${{ matrix.path }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          sparse-checkout: python
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
@@ -60,13 +51,3 @@ jobs:
         run: |
           twine upload --skip-existing --verbose dist/*
 
-  publish-javascript-distribution:
-    name: Publish JavaScript distribution
-    runs-on: ubuntu-latest
-    needs: create-release
-    if: ${{ needs.create-release.outputs.js_path_released != '' }}
-    defaults:
-      run:
-        working-directory: ${{ needs.create-release.outputs.js_path_released }}
-    steps:
-      - uses: actions/checkout@v4
