fix: remove mistralai dependency

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -52,7 +52,10 @@ commands_pre =
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: uv pip install -U boto3 anthropic
-  mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
+  mistralai: uv pip uninstall -r test-requirements.txt
+  mistralai: uv pip install --reinstall-package openinference-instrumentation-mistralai .
+  mistralai: python -c 'import openinference.instrumentation.mistralai'
+  mistralai: uv pip install -r test-requirements.txt
   mistralai-latest: uv pip install -U mistralai
   openai: uv pip uninstall -r test-requirements.txt
   openai: uv pip install --reinstall-package openinference-instrumentation-openai .
