--- a/python/instrumentation/openinference-instrumentation-smolagents/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-smolagents/pyproject.toml
@@ -43,6 +43,9 @@ test = [
   "openai",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+smolagents = "openinference.instrumentation.smolagents:SmolagentsInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-smolagents"
 
