feat(smolagents): updates to latest and makes examples use opentelemetry-instrument

--- a/python/instrumentation/openinference-instrumentation-smolagents/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-smolagents/examples/requirements.txt
@@ -1,9 +1,19 @@
+# Main dependencies of the examples in this directory:
+smolagents[e2b,gradio,litellm,openai]
 datasets
 langchain
-langchain-community
-opentelemetry-exporter-otlp
-opentelemetry-exporter-otlp-proto-http
-opentelemetry-sdk
+langchain_community
 rank_bm25
-requests
-sqlalchemy
+
+# Install `opentelemetry-instrument` for zero code instrumentation. This
+# defaults to export traces to localhost 4317, which Phoenix listens on.
+opentelemetry-sdk
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-distro
+# Source of openinference-instrumentation-smolagents
+-e ../
+
+
+# Both `opentelemetry-instrument` and main need .env variables. Run like this:
+#   dotenv run -- opentelemetry-instrument python e2b_example.py
+python-dotenv[cli]
