feat: add entrypoint for use in opentelemetry-instrument
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -45,6 +45,9 @@ test = [
   "litellm",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+dspy = "openinference.instrumentation.dspy:DSPyInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-dspy"
 
