--- a/python/instrumentation/openinference-instrumentation-groq/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-groq/pyproject.toml
@@ -45,6 +45,9 @@ test = [
     "responses",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+groq = "openinference.instrumentation.groq:GroqInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-groq"
 
