--- a/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
@@ -39,6 +39,9 @@ instruments = [
 test = [
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+mistralai = "openinference.instrumentation.mistralai:MistralAIInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-mistralai"
 
