--- a/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
@@ -39,6 +39,9 @@ instruments = [
   "openai >= 1.0.0",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+openai = "openinference.instrumentation.openai:OpenAIInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-openai"
 
