--- a/python/instrumentation/openinference-instrumentation-autogen/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-autogen/pyproject.toml
@@ -36,6 +36,12 @@ dependencies = [
 instruments = [
   "autogen >= 0.5.0",
 ]
+test = [
+  "autogen>=0.5.0",
+]
+
+[project.entry-points.opentelemetry_instrumentor]
+autogen = "openinference.instrumentation.autogen:AutogenInstrumentor"
 
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-autogen"
