--- a/python/instrumentation/openinference-instrumentation-bedrock/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-bedrock/pyproject.toml
@@ -48,6 +48,9 @@ test = [
   "pytest-vcr>=1.0.2",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+bedrock = "openinference.instrumentation.bedrock:BedrockInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-bedrock"
 
