--- a/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
@@ -44,6 +44,9 @@ test = [
   "vcrpy",
 ]
 
+[project.entry-points.opentelemetry_instrumentor]
+crewai = "openinference.instrumentation.crewai:CrewAIInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-crewai"
 
