--- a/python/tox.ini
+++ b/python/tox.ini
@@ -77,7 +77,7 @@ commands_pre =
   guardrails: uv pip install -r test-requirements.txt
   guardrails-latest: uv pip install -U 'guardrails-ai<0.5.1'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
-  crewai-latest: uv pip install -U crewai
+  crewai-latest: uv pip install -U crewai crewai-tools
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: uv pip install -U haystack-ai
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
