--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -54,7 +54,7 @@ test = [
 ]
 
 [project.entry-points.opentelemetry_instrumentor]
-lama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"
+llama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"
 
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-llama-index"
