--- a/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-dspy/pyproject.toml
@@ -48,6 +48,9 @@ test = [
 [project.entry-points.opentelemetry_instrumentor]
 dspy = "openinference.instrumentation.dspy:DSPyInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+dspy = "openinference.instrumentation.dspy:DSPyInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-dspy"
 
