--- a/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-openai/pyproject.toml
@@ -42,6 +42,9 @@ instruments = [
 [project.entry-points.opentelemetry_instrumentor]
 openai = "openinference.instrumentation.openai:OpenAIInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+openai = "openinference.instrumentation.openai:OpenAIInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-openai"
 
