--- a/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
@@ -42,6 +42,9 @@ instruments = [
 [project.entry-points.opentelemetry_instrumentor]
 guardrails = "openinference.instrumentation.guardrails:GuardrailsInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+guardrails = "openinference.instrumentation.guardrails:GuardrailsInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-guardrails"
 
