--- a/python/instrumentation/openinference-instrumentation-instructor/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-instructor/pyproject.toml
@@ -47,6 +47,9 @@ test = [
 [project.entry-points.opentelemetry_instrumentor]
 instructor = "openinference.instrumentation.instructor:InstructorInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+instructor = "openinference.instrumentation.instructor:InstructorInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-instructor"
 
