--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -56,6 +56,9 @@ test = [
 [project.entry-points.opentelemetry_instrumentor]
 llama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+llama_index = "openinference.instrumentation.llama_index:LlamaIndexInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-llama-index"
 
