--- a/python/instrumentation/openinference-instrumentation-vertexai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-vertexai/pyproject.toml
@@ -45,6 +45,9 @@ test = [
 [project.entry-points.opentelemetry_instrumentor]
 vertexai = "openinference.instrumentation.vertexai:VertexAIInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+vertexai = "openinference.instrumentation.vertexai:VertexAIInstrumentor"
+
 [project.urls]
 homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-vertexai"
 
