--- a/python/instrumentation/openinference-instrumentation-smolagents/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-smolagents/pyproject.toml
@@ -47,6 +47,9 @@ test = [
 [project.entry-points.opentelemetry_instrumentor]
 smolagents = "openinference.instrumentation.smolagents:SmolagentsInstrumentor"
 
+[project.entry-points.openinference_instrumentor]
+smolagents = "openinference.instrumentation.smolagents:SmolagentsInstrumentor"
+
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-smolagents"
 
