--- a/python/examples/dspy-rag-fastapi/backend/pyproject.toml
+++ b/python/examples/dspy-rag-fastapi/backend/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 description = "FastAPI wrapper around dspy"
 authors = ["diicell", "mikeldking"]
 license = "MIT"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10, <3.11"
