--- a/.github/workflows/cla.yaml
+++ b/.github/workflows/cla.yaml
@@ -24,4 +24,4 @@ jobs:
                   path-to-signatures: "signatures/version1/cla.json"
                   path-to-document: "https://github.com/Arize-ai/openinference/blob/main/CLA.md"
                   branch: "cla"
-                  allowlist: gitbook-bot, github-actions
+                  allowlist: gitbook-bot, github-actions, dependabot
