--- a/js/packages/openinference-instrumentation-beeai/package.json
+++ b/js/packages/openinference-instrumentation-beeai/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json && tsc-alias -p tsconfig.esm.json",
+    "postbuild": "echo '{\"type\": \"module\"}' > ./dist/esm/package.json && rimraf dist/test",
     "type:check": "tsc --noEmit",
     "test": "jest"
   },
@@ -38,15 +39,17 @@
     "remeda": "^2.20.2"
   },
   "devDependencies": {
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
-    "@opentelemetry/resources": "^1.30.1",
     "@opentelemetry/sdk-node": "^0.57.1",
-    "@opentelemetry/semantic-conventions": "^1.28.0",
     "@types/jest": "^29.5.12",
     "beeai-framework": "^0.1.5",
     "import-in-the-middle": "^1.13.0",
     "jest": "^29.7.0",
-    "ollama": "^0.5.12",
     "ts-node": "^10.9.2"
+  },
+  "optionalDependencies": {
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
+    "@opentelemetry/resources": "^1.30.1",
+    "@opentelemetry/semantic-conventions": "^1.28.0",
+    "ollama": "^0.5.12"
   }
 }
