--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,6 +7,7 @@ envlist =
   py3{9,13}-ci-{bedrock,bedrock-latest}
   py3{9,13}-ci-{mistralai,mistralai-latest}
   py3{9,13}-ci-{openai,openai-latest}
+  py3{9,13}-ci-{openai_agents,openai_agents-latest}
   py3{9,13}-ci-{vertexai,vertexai-latest}
   py3{9,13}-ci-{llama_index,llama_index-latest}
   py3{9,13}-ci-{dspy,dspy-latest}
@@ -33,6 +34,7 @@ changedir =
   bedrock: instrumentation/openinference-instrumentation-bedrock/
   mistralai: instrumentation/openinference-instrumentation-mistralai/
   openai: instrumentation/openinference-instrumentation-openai/
+  openai_agents: instrumentation/openinference-instrumentation-openai-agents/
   vertexai: instrumentation/openinference-instrumentation-vertexai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
   dspy: instrumentation/openinference-instrumentation-dspy/
@@ -62,6 +64,11 @@ commands_pre =
   openai: python -c 'import openinference.instrumentation.openai'
   openai: uv pip install -r test-requirements.txt
   openai-latest: uv pip install -U openai
+  openai_agents: uv pip uninstall -r test-requirements.txt
+  openai_agents: uv pip install --reinstall-package openinference-instrumentation-openai-agents .
+  openai_agents: python -c 'import openinference.instrumentation.openai_agents'
+  openai_agents: uv pip install -r test-requirements.txt
+  openai_agents-latest: uv pip install -U openai_agents
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
   vertexai-latest: uv pip install -U vertexai
   llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
