--- a/js/packages/openinference-instrumentation-beeai/package.json
+++ b/js/packages/openinference-instrumentation-beeai/package.json
@@ -39,17 +39,17 @@
     "remeda": "^2.20.2"
   },
   "devDependencies": {
-    "@opentelemetry/sdk-node": "^0.57.1",
     "@types/jest": "^29.5.12",
     "beeai-framework": "^0.1.5",
     "import-in-the-middle": "^1.13.0",
-    "jest": "^29.7.0",
-    "ts-node": "^10.9.2"
+    "jest": "^29.7.0"
   },
   "optionalDependencies": {
+    "ollama": "^0.5.12",
+    "ts-node": "^10.9.2",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
     "@opentelemetry/resources": "^1.30.1",
-    "@opentelemetry/semantic-conventions": "^1.28.0",
-    "ollama": "^0.5.12"
+    "@opentelemetry/sdk-node": "^0.57.1",
+    "@opentelemetry/semantic-conventions": "^1.28.0"
   }
 }
